MaxPermSize is deprecated since jdk 1.8 and gives error in jdk-17